[tool.poetry]
name = "tehjira"
version = "0.0.0"
description = "All the jiras"
authors = ["Jackson Gilman <jackson.j.gilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
jira = "^3.3.1"
SQLAlchemy = "^1.4.39"
pendulum = "^2.1.2"
typer = "^0.6.1"
tabulate = "^0.8.10"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
types-tabulate = "^0.8.11"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["tehjira"]
plugins = ["sqlmypy"]

[tool.poetry.scripts]
tehjira = "tehjira.cli:app"
